--- a/002倒影数字时钟/index.html
+++ b/002倒影数字时钟/index.html
@@ -11,9 +11,9 @@
     <div class="clock">
       <h2>The time is now</h2>
       <div class="time">
-        <div><span class="hour">00</span><span>Hours</span></div>
-        <div><span class="minutes">00</span><span>Minutes</span></div>
-        <div><span class="seconds">00</span><span>Seconds</span></div>
+        <div><span class="a">00</span><span>Hours</span></div>
+        <div><span class="b">00</span><span>Minutes</span></div>
+        <div><span class="c">00</span><span>Seconds</span></div>
       </div>
     </div>
     <script src="../002倒影数字时钟/js/index.js"></script>
